tests/suite/snapshots/suite__case_sbg9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Scalar
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: MappingValue
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: SequenceStart
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Scalar
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: CollectionEntry
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: Separator
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Scalar
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: SequenceEnd
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: CollectionEntry
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Separator
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 12
- token: SequenceStart
  start:
    line: 0
    column: 12
  end:
    line: 0
    column: 13
- token: Scalar
  start:
    line: 0
    column: 13
  end:
    line: 0
    column: 14
- token: CollectionEntry
  start:
    line: 0
    column: 14
  end:
    line: 0
    column: 15
- token: Separator
  start:
    line: 0
    column: 15
  end:
    line: 0
    column: 16
- token: Scalar
  start:
    line: 0
    column: 16
  end:
    line: 0
    column: 17
- token: SequenceEnd
  start:
    line: 0
    column: 17
  end:
    line: 0
    column: 18
- token: MappingValue
  start:
    line: 0
    column: 18
  end:
    line: 0
    column: 19
- token: Separator
  start:
    line: 0
    column: 19
  end:
    line: 0
    column: 20
- token: Scalar
  start:
    line: 0
    column: 20
  end:
    line: 0
    column: 21
- token: MappingEnd
  start:
    line: 0
    column: 21
  end:
    line: 0
    column: 22
- token: Break
  start:
    line: 0
    column: 22
  end:
    line: 1
    column: 0

