tests/suite/snapshots/suite__case_ske5.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: MappingValue
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Break
  start:
    line: 1
    column: 4
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Anchor
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: AnchorName
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 8
- token: Break
  start:
    line: 2
    column: 8
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: SequenceEntry
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: Break
  start:
    line: 3
    column: 3
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Break
  start:
    line: 4
    column: 3
  end:
    line: 5
    column: 0

