tests/suite/snapshots/suite__case_sm9w_01.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Empty
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingValue
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Empty
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 1

