tests/suite/snapshots/suite__case_sr86.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"key2: &b *a\\r\\n\""
  start:
    index: 16
    line: 1
    column: 0
  end:
    index: 16
    line: 1
    column: 0

