tests/suite/snapshots/suite__case_ssw6.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SingleQuote
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: SingleQuoted
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 5
- token: EscapedQuote
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 7
- token: SingleQuoted
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 20
- token: SingleQuote
  start:
    line: 1
    column: 20
  end:
    line: 1
    column: 21
- token: Break
  start:
    line: 1
    column: 21
  end:
    line: 2
    column: 0

