tests/suite/snapshots/suite__case_su74.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"&b *alias : value2\\r\\n\""
  start:
    index: 21
    line: 1
    column: 0
  end:
    index: 21
    line: 1
    column: 0

