tests/suite/snapshots/suite__case_sy6v.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at &anchor - sequence entry\r\n"
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0

