tests/suite/snapshots/suite__case_t26h.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Literal
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Break
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 7
    line: 1
    column: 0
- token: Indent
  start:
    index: 7
    line: 1
    column: 0
  end:
    index: 8
    line: 1
    column: 1
- token: ScalarBreak
  start:
    index: 8
    line: 1
    column: 1
  end:
    index: 10
    line: 2
    column: 0
- token: Indent
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 12
    line: 2
    column: 2
- token: ScalarBreak
  start:
    index: 12
    line: 2
    column: 2
  end:
    index: 14
    line: 3
    column: 0
- token: Indent
  start:
    index: 14
    line: 3
    column: 0
  end:
    index: 16
    line: 3
    column: 2
- token: Scalar
  start:
    index: 16
    line: 3
    column: 2
  end:
    index: 23
    line: 3
    column: 9
- token: ScalarBreak
  start:
    index: 23
    line: 3
    column: 9
  end:
    index: 25
    line: 4
    column: 0
- token: Indent
  start:
    index: 25
    line: 4
    column: 0
  end:
    index: 27
    line: 4
    column: 2
- token: Scalar
  start:
    index: 27
    line: 4
    column: 2
  end:
    index: 28
    line: 4
    column: 3
- token: ScalarBreak
  start:
    index: 28
    line: 4
    column: 3
  end:
    index: 30
    line: 5
    column: 0
- token: Indent
  start:
    index: 30
    line: 5
    column: 0
  end:
    index: 32
    line: 5
    column: 2
- token: ScalarBreak
  start:
    index: 32
    line: 5
    column: 2
  end:
    index: 34
    line: 6
    column: 0
- token: Indent
  start:
    index: 34
    line: 6
    column: 0
  end:
    index: 36
    line: 6
    column: 2
- token: Scalar
  start:
    index: 36
    line: 6
    column: 2
  end:
    index: 40
    line: 6
    column: 6
- token: ScalarBreak
  start:
    index: 40
    line: 6
    column: 6
  end:
    index: 42
    line: 7
    column: 0
- token: Indent
  start:
    index: 42
    line: 7
    column: 0
  end:
    index: 42
    line: 7
    column: 0
- token: Break
  start:
    index: 42
    line: 7
    column: 0
  end:
    index: 44
    line: 8
    column: 0
- token: Indent
  start:
    index: 44
    line: 8
    column: 0
  end:
    index: 45
    line: 8
    column: 1
- token: Comment
  start:
    index: 45
    line: 8
    column: 1
  end:
    index: 46
    line: 8
    column: 2
- token: CommentText
  start:
    index: 46
    line: 8
    column: 2
  end:
    index: 54
    line: 8
    column: 10
- token: Break
  start:
    index: 54
    line: 8
    column: 10
  end:
    index: 56
    line: 9
    column: 0

